# leeson

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README.md   TUI_PLAN.md  agent_risk.json  pydantic-logfire-guide.md  pyproject.toml  risk.json
.claude/: settings.local.json
.entire/: .gitignore  settings.json
.github/workflows/: build.yml  changelog.yml  ci.yml  release.yml
0f/be93a1461e/: metadata.json
0f/be93a1461e/0/: content_hash.txt  full.jsonl  metadata.json
1c/22ee6b5751/: metadata.json
1c/22ee6b5751/0/: context.md  full.jsonl  metadata.json  prompt.txt  summary.txt
1e/0969e296a3/: metadata.json
1e/0969e296a3/0/: context.md  full.jsonl  metadata.json  prompt.txt  summary.txt
2c/16612460bb/: metadata.json
31/3212773455/: metadata.json
3c/b8ab385bde/: metadata.json
3d/14ebdf5204/: metadata.json
3d/9d43b90f38/: metadata.json
40/37582565aa/: metadata.json
43/f22d5280d9/: metadata.json
46/19356414d0/: metadata.json
49/bc371ae090/: metadata.json
4b/b903cf2a7e/: metadata.json
54/b4709be998/: metadata.json
5c/1dc50c2932/: metadata.json
5e/35f7e8369e/: metadata.json
64/d4f2b9fc83/: metadata.json
6e/deafb9fd50/: metadata.json
74/111e8f337e/: metadata.json
75/70f303f3e6/: metadata.json
7c/58efcace17/: metadata.json
82/0d5ebfb89f/: metadata.json
83/f2ec459458/: metadata.json
8a/c8589c671f/: metadata.json
8a/d46289379c/: metadata.json
92/9f3ad0ba72/: metadata.json
94/d55ab2b9a5/: metadata.json
96/5ce9bc68de/: metadata.json
97/03134e4e6d/: metadata.json
98/5937ed74f7/: metadata.json
9a/6c541bf605/: metadata.json
a6/c9c33d78de/: metadata.json
a8/3f52ac6ffd/: metadata.json
ac/67f109bbc3/: metadata.json
agents/: agent1.py  leeson_agent.py  pyproject.toml
agents/multi_agent/: __main__.py  bridge.py  bus.py  llm.py  models.py  orchestrator.py  state.py  technical.py
b3/0a40bc76a1/: metadata.json
b5/67c357e8d7/: metadata.json
b6/9e80b8514d/: metadata.json
b7/ea2201e0f9/: metadata.json
b8/565de8f862/: metadata.json
bd/6479f782c2/: metadata.json
be/eb329d5421/: metadata.json
cf/0326f50877/: metadata.json
cf/bc33ce03b4/: metadata.json
d2/77ac0b2634/: metadata.json
e0/7a57e5daf0/: metadata.json
e1/6729a1a7f8/: metadata.json
e5/531953bd8f/: metadata.json
e8/d5888d902e/: metadata.json
e9/548e9c25eb/: metadata.json
ef/afa15cd6af/: metadata.json
f9/c8d1e81eb7/: metadata.json
ff/c8b55d678d/: metadata.json
src/: agent.rs  auth.rs  config.rs  credentials.rs  error.rs  lib.rs  main.rs  python.rs  simulation.rs  tls.rs  websocket.rs
src/models/: add_order.rs  amend_order.rs  balance.rs  batch_add.rs  batch_cancel.rs  book.rs  cancel_after.rs  cancel_all.rs  cancel_order.rs  candle.rs  edit_order.rs  execution.rs  instrument.rs  mod.rs  orders.rs  ticker.rs  trade.rs
src/risk/: config.rs  mod.rs
src/tui/: app.rs  event.rs  mod.rs  terminal.rs  ui.rs
src/websocket/: connection.rs  handler.rs  mod.rs  subscription.rs  trading.rs
tests/: config_test.rs  integration_test.rs  models_test.rs  ticker_test.rs  websocket_test.rs
tests/common/: mod.rs
tests/fixtures/: amend_order_error.json  amend_order_success.json  book.json  candle.json  config.toml  execution.json  heartbeat.json  instrument.json  invalid_config.toml  orders.json  pong.json  status.json  ticker.json  trade.json
(+251 files in other folders)
