[package]
name = "leeson"
version = "0.1.0"
edition = "2024"
description = "leveraged execution engine for speculative operations network"

[dependencies]
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
tungstenite = "0.28.0"
futures-util = "0.3"
serde_json = "1.0"
thiserror = "2"
rust_decimal = { version = "1.37", features = ["serde", "serde-with-str"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
toml = "0.8"
rust_decimal_macros = "1.37"

[features]
integration-tests = []
