[package]
name = "leeson"
version = "0.1.0"
edition = "2024"
description = "leveraged execution engine for speculative operations network"
license-file = "LICENSE"

[dependencies]
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.28.0"
futures-util = "0.3"
serde_json = "1.0"
thiserror = "2"
rust_decimal = { version = "1.37", features = ["serde", "serde-with-str"] }
tracing = "0.1"
tracing-subscriber = "0.3"
crc32fast = "1.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-manual-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
zeroize = { version = "1.8", features = ["alloc"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
unicode-width = "0.2"

[dev-dependencies]
tokio-test = "0.4"
toml = "0.8"
rust_decimal_macros = "1.37"

[features]
integration-tests = []
