[package]
name = "leeson"
version = "0.1.0"
edition = "2024"
description = "leveraged execution engine for speculative operations network"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.28.0"
futures-util = "0.3"
serde_json = "1.0"
thiserror = "2"
rust_decimal = { version = "1.37", features = ["serde", "serde-with-str"] }
tracing = "0.1"
tracing-subscriber = "0.3"
crc32fast = "1.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-manual-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
zeroize = { version = "1.8", features = ["alloc"] }
keyring = "3"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
unicode-width = "0.2"
pyo3 = { version = "0.28.0", optional = true, features = ["rust_decimal"] }

[dev-dependencies]
tokio-test = "0.4"
rust_decimal_macros = "1.37"
tempfile = "3.25.0"

[features]
integration-tests = []
python = ["dep:pyo3"]
extension-module = ["pyo3/extension-module"]

[profile.release]
strip = true
lto = true
